Task5/admin-backend-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: admin-back-end-api-app
  namespace: netpol-test
  labels:
    role: admin-back-end-api
spec:
  selector:
    role: admin-back-end-api
  ports:
    - protocol: TCP
      port: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: admin-back-end-api-app
  namespace: netpol-test
spec:
  replicas: 1
  selector:
    matchLabels:
      role: admin-back-end-api
  template:
    metadata:
      labels:
        role: admin-back-end-api
    spec:
      containers:
        - name: nginx
          image: nginx:latest
          ports:
            - containerPort: 80
