Task5/frontend-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: front-end-app
  namespace: netpol-test
  labels:
    role: front-end
spec:
  selector:
    role: front-end
  ports:
    - protocol: TCP
      port: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: front-end-app
  namespace: netpol-test
spec:
  replicas: 1
  selector:
    matchLabels:
      role: front-end
  template:
    metadata:
      labels:
        role: front-end
    spec:
      containers:
        - name: nginx
          image: nginx:latest
          ports:
            - containerPort: 80
